--- a/index.html
+++ b/index.html
@@ -1,50 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Scooter Landing </title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="" href="images/fav.png">
-</head>
-<body>
-    <!--------------- nav part start-------------- -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>E-Scooter Landing Page</title>
+    <!----------------- AOS links -------------- -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!--------------- bootstrap links ----------- -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
+    <!------------- external css links -------------- -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" href="images/fav.png">
+    <link rel="stylesheet" href="css/style.css" />  
+  </head>
+  <body>
+    <!--------------------- nav bar  start --------------- -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary main_menue">
+      <div class="container">
+        <a class="navbar-brand logo" href="#"><img src="images/nav.png" alt="nav logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto ">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">PRODUCTS</a>
+            </li>  <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">GALLERY</a>
+            </li>  <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
+            </li>
+            <div class="menue_buttons">
+              <a href="#">Sign In</a>
+              <a href="#">Sign Up</a>
+
+            </div>
+        </div>
+      </div>
+    </nav>
+    <!--------------------- nav bar  end --------------- -->
+    <!------------------ banner part ---------------- -->
+    <section id="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="bannerText">
+              <h1>
+                Let's ride 
+                <span>the future.</span>
+              </h1>
+              <span class="banner_line"></span>
+              <p>Simple and sleek design with users in mind.</p>
+              <div class="banner_buttons">
+                <button class="learn-more">
+                  <span class="circle" aria-hidden="true">
+                  <span class="icon arrow"></span>
+                  </span>
+                  <span class="button-text">Buy now </span>
+                </button>
+               <p>Watch our
+                video how
+                it works</p>
+                 <a href="#"> <img src="images/watchNow.png" alt="watchNow"></a>
+              </div>
+            </div>
           </div>
         </div>
-      </nav>
+      </div>
+      <div data-aos="fade-up"
+      data-aos-anchor-placement="center-bottom"class="bannerImage">
+        <img src="images/banner_image (1).png" alt="scooter image">
+      </div>
+    </section>
+    <section class="plugins">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2">
+            <div  data-aos="zoom-out" class="counter_single_box">
+              <h2><span class="counter">105</span>lbs</h2>
+              <p>Net Weight</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div data-aos-duration="500"  data-aos="zoom-out" class="counter_single_box">
+              <h2><span class="counter">26</span>mph</h2>
+              <p>Top Speed </p>
+            </div>
+          </div> <div class="col-lg-2">
+            <div data-aos-duration="1000" data-aos="zoom-out" class="counter_single_box">
+              <h2><span class="counter">38</span>miles</h2>
+              <p>Max Range</p>
+            </div>
+          </div> <div class="col-lg-2">
+            <div data-aos-duration="1500" data-aos="zoom-out" class="counter_single_box">
+              <h2><span class="counter">89</span>nm</h2>
+              <p>Max Torques</p>
+            </div>
+          </div> <div class="col-lg-2">
+            <div data-aos-duration="2000" data-aos="zoom-out" class="counter_single_box">
+              <h2><span class="counter">22</span><span>%</span>slope</h2>
+              <p>Net Weight</p>
+            </div>
+          </div> <div class="col-lg-2">
+            <div data-aos-duration="2500" data-aos="zoom-out" class="counter_single_box">
+              <h2><span class="counter">2</span><span>x</span></h2>
+              <p>Hydralic Disc Brakes</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+ <!------------------ product info part start --------------- -->
+ <section class="productInfo">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="section_text">
+          <h3>Product Information</h3>
+          <p>Our Scooter has following unique design and technology features:</p>
+        </div>
+      </div>
+    </div>
+    <div class="row features_row">
+      <div class="col-lg-6">
+        <div data-aos-duration="1000" data-aos="zoom-in-up" class="productImg">
+          <img src="images/product.png" alt="">
+        </div>
+      </div>
+      <div  class="col-lg-6">
+       <div data-aos-duration="1500" data-aos="zoom-in-down" class="feature_img">
+       <img src="images/features.png" alt="">
+       </div>
+        </div>
+      </div>
+    </div>
+  </div>
+ </section>c
 
 
 
@@ -62,34 +163,20 @@
 
 
 
-
-    <!--------------- nav part end-------------- -->
+<!----------------------------- jquery lik -------------------- -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"
+      integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+"
+      crossorigin="anonymous"
+    ></script>
+    <!--------------------- counter cdn --------------- -->
    
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!---------------------- custom js liks --------------------- -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- -----------------js links start-------------------------- -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
-
-<!-- -----------------js links end-------------------------- -->
-
-
-
-
-
-</body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
